content/themes/casper/assets/css/screen.css
/* ... */
/* ==========================================================================
   13. Animations
   ========================================================================== */

/* Used to fade in title/desc on the home page */
@-webkit-keyframes fade-in-down {
    0% {
        opacity: 0;
        -webkit-transform: translateY(-10px);
        transform: translateY(-10px);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}
@keyframes fade-in-down {
    0% {
        opacity: 0;
        -webkit-transform: translateY(-10px);
        transform: translateY(-10px);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}

/* Used to bounce .scroll-down on home page */
@-webkit-keyframes bounce {
    0%, 10%, 25%, 40%, 50% {
        -webkit-transform: translateY(0) rotate(-90deg);
                transform: translateY(0) rotate(-90deg);
    }
    20% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
                transform: translateY(-10px) rotate(-90deg);
    }
    30% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
                transform: translateY(-5px) rotate(-90deg);
    }
}
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        -webkit-transform: translateY(0) rotate(-90deg);
                transform: translateY(0) rotate(-90deg);
    }
    40% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
                transform: translateY(-10px) rotate(-90deg);
    }
    60% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
                transform: translateY(-5px) rotate(-90deg);
    }
}


/* ==========================================================================
   End of file. Animations should be the last thing here. Do not add stuff
   below this point, or it will probably fuck everything up.
   ========================================================================== */


/*IPHONE 6 styles*/

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px) {
  .toggle-menu {
    margin-right: -30px;
    margin-top: 3px;
  }

}

@media only screen and (max-width: 768px) {
  .black-bg{
    background-color: black;
    margin-top: 75px;
  }
  #mailinglist{
    text-align: center;
    padding-bottom: 140px;
  }
  #mailinglist p{
    padding-top: 20px;
  }
  #mailinglist .subtitle{
    text-align: center;
    margin-top: -20px;
  }
}

/* NAV FIX */
@media only screen and (min-width: 990px) {
  .push-body-toleft {
    left: 0px !important;
  }
}

